# reaper

./: .gitignore  AGENTS.md  CODEBASE.md  PROMPT.md  README.md  SCHEMA.md  SIMTOWER.EX_  main.py  manual-facts.md  pyproject.toml  simtower-manual.md  simtower-prompt.txt
.agents/skills/pyghidra/: SKILL.md
.agents/skills/pyghidra-decompiler/: SKILL.md
.agents/skills/pyghidra-decompiler/examples/: apply_datatype.py  commit_locals.py  create_struct.py  decompile.py  iterate_functions.py  lookup_datatypes.py  rename_parameters.py  rename_variables.py
.agents/skills/pyghidra/examples/: apply_datatype.py  create_struct.py  decompile.py  disassemble.py  iterate_functions.py  (+3 more)
.agents/skills/radare2/: SKILL.md
docs/: Context Engineering.md
scripts/: README.md  apply_analysis_json_to_ghidra.py  apply_db_analysis_to_ghidra.py  create_ghidra_functions.py  create_ghidra_functions_from_prologues.py  create_ghidra_project.py  decompile_ghidra_functions.py  export_ghidra_function_bundle.py  extract_ne_resources.py  find_ghidra_address_xrefs.py  find_ghidra_string_xrefs.py  import_angr_functions.py  inventory_ghidra_functions.py  merge_analysis_json.py  migrate.py  rebase_analysis_json_by_storage.py  scan_operand_immediate.py  split_ghidra_variable.py  sync_names_to_ghidra.py
src/reaper/: README.md  __init__.py
src/reaper/db/: README.md  __init__.py  base.py  config.py  models.py  session.py
src/simtower/: __init__.py  constants.py  emulator.py  heap.py  ne_loader.py  stub_handlers.py  stub_helpers.py  stubs.py  stubs_gdi.py  stubs_kernel.py  stubs_misc.py  stubs_user.py
(+8 files in other folders)
