[project]
name = "reaper"
version = "0.1.0"
description = "Reverse Engineering through Automated Prompt Execution and Recording"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "angr>=9.2.205",
    "pgvector>=0.3.6",
    "pyghidra>=3.0.2",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.39",
]
