[project]
name = "reaper"
version = "0.1.0"
description = "Reverse Engineering through Automated Prompt Execution and Recording"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "angr>=9.2.205",
    "pyghidra>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ty.src]
exclude = [".agents/skills/**/examples/**"]

[tool.ruff]
exclude = [".agents/skills/**/examples/**"]
